devops/projects/202-jenkins-pipeline-for-phonebook-app-on-docker-swarm/docker-swarm-cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This Cloudformation Template creates five Compose enabled Docker Machines on EC2 Instances
which are ready for Docker Swarm operations (Docker Swarm with 3 manager and 2 worker node instances)
Enables the swarm node instances with IAM Role allowing them to work with ECR repos using the instance profile
Installs AWS CLI `Version 2` on swarm node instances to use `aws ecr` commands.
Docker Machines will run on Amazon Linux 2 with custom security group 
allowing SSH (22), HTTP (80) and TCP(2377, 8080) connections from anywhere.
User needs to select appropriate key name when launching the template.

Parameters:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH connections.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be one of the existing EC2 KeyPair
    
  SwarmManagerJoinToken:
    Description: 'The token to join the swarm cluster as a manager node'
    Type: String
    Default: ''
    NoEcho: true

  SwarmWorkerJoinToken:
    Description: 'The token to join the swarm cluster as a worker node'
    Type: String
    Default: ''
    NoEcho: true

  DesiredManagerInstances:
    Description: 'The number of manager nodes'
    Type: Number
    Default: 2
    AllowedValues: [1,3,5,7]

  DesiredWorkerInstances:
    Description: 'The number of worker nodes'
    Type: Number
    Default: 2


Resources:
  DockerMachinesSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable SSH and HTTP for Docker Machines #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2377
          ToPort: 2377
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

  DockerMachine1:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-04bf6dcdc9ab498ca
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName 
      SecurityGroupIds:
        - !GetAtt DockerMachinesSecurityGroup.GroupId
      Tags:
        - 
          Key: Name
          Value: "Grand-Master"
      UserData: 
          Fn::Base64: |
          #! /bin/bash
          yum update -y
          amazon-linux-extras install docker -y
          systemctl start docker
          systemctl enable docker
          usermod -a -G docker ec2-user
          curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" \
          -o /usr/local/bin/docker-compose
          chmod +x /usr/local/bin/docker-compose
          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
          unzip awscliv2.zip
          ./aws/install
          docker swarm init
          docker service create \
          --name=viz \
          --publish=8080:8080/tcp \
          --constraint=node.role==manager \
          --mount=type=bind,src=/var/run/docker.sock,dst=/var/run/docker.sock \
          dockersamples/visualizer
  
  ManagerNodes:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateName: DockerManageNodes
      LaunchTemplateData:
        ImageId: ami-04bf6dcdc9ab498ca
        InstanceType: t2.micro
        KeyName: !Ref KeyPairName
        SecurityGroupIds:
        - !GetAtt DockerMachinesSecurityGroup.GroupId
        JoinToken: !Ref SwarmManagerJoinToken
      Tags:
        - 
          Key: Name
          Value: !Sub Docker Machine of ${AWS::StackName}
    UserData:
      Fn::Base64: |
        #! /bin/bash
        yum update -y
        amazon-linux-extras install docker -y
        systemctl start docker
        systemctl enable docker
        usermod -a -G docker ec2-user
        curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" \
        -o /usr/local/bin/docker-compose
        chmod +x /usr/local/bin/docker-compose
        pip install ec2instanceconnectcli
        
Outputs:
